--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -6,7 +6,7 @@
   aside {
     flex: 7;
 
-    background: #835AFD;
+    background: #835afd;
     color: #FFF;
 
     display: flex;
@@ -29,7 +29,7 @@
       font-size: 24px;
       line-height: 32px;
       margin-top: 16px;
-      color: #F8F8F8;
+      color: #f8f8f8;
     }
   }
 
@@ -67,7 +67,7 @@
         border-radius: 8px;
         padding: 0 16px;
         background: #FFF;
-        border: 1px solid #A8A8B3;
+        border: 1px solid #a8a8b3;
       }
 
       button { 
